2006-04-12 CTAF <>
	* ct-installconf : use default value with ssft
	* ct-profile : use default value with ssft
	* ct-installconf : use a multiple choice list to install just the package the user want
	* global : bug at epita (dialog don't work well with ssh)
	* grktools.sh : new shell tools to link/copy file/dir with backup and uninstall

2006-04-11 CTAF <>
	* ssft.sh : added "shell script frontend" (lib from debian)
	* ct-profile : use ssft
	* ct-profile : new value ctafconf_interface to choose a default frontend
	* global : remove empty file in .ctafconf/perso/*/
	* ct-installconf : create directory in perso if they don't exist
	* ssft.sh : remove source check, adapt title, cleanup
	* enlightenment : etc/enlightenment is static, ~/.enlightenment is a real directory
	* enlightenment : scan for ctafconf wallpaper (in perso and in etc)
	* fluxbox : remove keys and menu links in ~/.fluxbox (not needed)
	* ct-save-ctafconf : remove empty file handling
	* ct-installconf : complete rewrite with ssft
	* etc/*.grk : package file allowing installation/uninstallation (not finished)
	* global : change svn:executable bit, remove when not usefull
	* global : moved all configuration file in .ctafconf/etc to a subdirectory (except *.grk)

2006-04-10 CTAF <>
	* ct-add-wallpaper : bug with name with space
	* xsession : new wm term (just run one term)

2006-04-09 CTAF <>
	* ct-date : bug with tomorrow
	* ct-profile : add #!/bin/{csh, sh} to user-profile{,csh}
	* user-profile.mine : support enligthenment
	* enlightenment/file.menu : use ct-launch

2006-04-06 Elthariel <>
	* enligthenment : basic config (ct-install, ct-profile)
	* fluxbox/init : ??

2006-04-05 CTAF <>
	* std_comment.el : bug with GNUMakefile mode
	* ct-date : event can be every month

2006-04-01 CTAF <>
	* zshprompt : cleanup
	* sshep : removed (epita specific)
	* ct-date : bug with day between 01 and 09
	* grepr : remove directory (use current directory)
	* top : 2 windows (cpu and mem)