@@ -1,27 +1,14 @@
-ERROR
-Creating directory: /u/a2/gestes_c/.enlightenment
-Creating directory: /u/a2/gestes_c/.enlightenment/backgrounds
-Copying: etc/e16/user_theme.cfg in /u/a2/gestes_c/.enlightenment/user_theme.cfg
-cp: /u/a2/gestes_c/.enlightenment/user_theme.cfg: No such file or directory
-Copying: etc/e16/file.menu in /u/a2/gestes_c/.enlightenment/file.menu
-cp: /u/a2/gestes_c/.enlightenment/file.menu: No such file or directory
-Linking: /u/a2/gestes_c/.enlightenment/backgrounds/persowallpp -> perso/wallpaper
-ln: /u/a2/gestes_c/.enlightenment/backgrounds/persowallpp: No such file or directory
-Linking: /u/a2/gestes_c/.enlightenment/backgrounds/ctafconfwallpp -> etc/wallpaper
-ln: /u/a2/gestes_c/.enlightenment/backgrounds/ctafconfwallpp: No such file or directory
-Package e16 installed
-
-
 NEEDED:
+- test with dash (posix shell, or busybox)
 - cleanup: personnal info (sshe, sshep (put in perso/bin))
 - conky then torsmo..
-- diff .mine file /?/ remove .mine from archive and touch them from ct-install
-- save installed .mine in perso/previous/mine, to allow a good diff
+- diff .mine file /?/
 - define default program: navigateur/mail reader/term/pager/.../EDITOR/..
 - if user-profile and user-profile.csh exist ask which param to modify
 - test if it work with space in /home/ct af/ for example
 - specify interface in argument to ct-profile, ct-install, ...
 - add help for ct-profile, ct-install (for interface)
+- remove header when doing diff/remove header from *.mine
 
 DOCUMENTATION:
 - emacs: README.EMACS, install just emacs, just test emacsconf, ..
@@ -40,14 +27,9 @@ MINE:
 - .mine for fluxbox user-menu
 
 SSFT:
-- check if the frontend exist, else default to another
-- remove I10N
-- default value for yesno
 - read -e at epita
-- default window size
 
 CTAFCONF:
-- ask when installing: ask|all|choice
 - uninstall with revert to date (choose from all previous file)
 - ramdom wallpaper (wallpp = ramdom, ramdomperso)
 - use sabayon for gnome-conf/ff-conf
@@ -65,18 +47,15 @@ SHELL
 - ctafconf.sh => add color for all term (CT_RED,CT_YELLOW,..) and for prompt
 - zsh: bindkey => "^Xf" => firefox, "^Xt" thunderbird ...
 
-EMACS
-- ## SEE .ctafconf/etc/emacs/startup.emacs ##
+EMACS ## SEE .ctafconf/etc/emacs/startup.emacs ##
 - emacs: in console (ctrl+backspace, disable ring bell) (enable vt102 in xterm,..)
 - emacs: ctrl-qqch => replace the current line , with the current buffer
-- tab = 2 in bash-mode
 - transparent (use console backcolor)
 - kill char from cur to begin
 - /???/ Emacs autoresize at start conflicts with wm app properties save (use .mine to customize the beahavour)
 
 ENLIGHTENMENT
 - Enhance integration with ctafconf(wallpapers/bindkeys/E16-Gnome)
-- Support uninstall.
 
 
 BONUS:
@@ -116,3 +95,11 @@ xbindkeys (?)
 - problem with permission (read only on .enlightenment, .background)
 - testfile test if not a symlink
 - copy instead of linking => after that, ct-installconf always reinstall
+- ssft: check if the frontend exist, else default to another
+- remove I10N (desactivated)
+- save installed .mine in perso/previous/mine, to allow a good diff
+- ask when installing: ask|all|choice
+- Support uninstall for enlightenment
+- tab = 2 in bash-mode
+- default value for yesno (impossible for zenity nor kdialog)
+- default window size for ssft
