@@ -90,7 +90,12 @@ grk_ask_install()
 {
     name=$1
 
-    echo "Ask: $name"
+    . ~/.ctafconf/etc/"$name".grk
+    if ! pkg_is_installed $name; then
+      if ssft_yesno "Do you want to install $name" "`pkg_description $name`"; then
+        echo "Ask: $name"
+      fi
+    fi
 }
 
 grk_install_list()
@@ -160,7 +165,7 @@ SSFT_DEFAULT=ask
 ssft_select_single "Select one installation method" "'All' install every package, 'Ask' ask your before each package, and 'Choice' let you select packages you want in a list" all ask choice
 insmethod=$SSFT_RESULT
 ###ASK
-if [ x$insmethod = xask ]; then
+if [ x$insmethod = xask ] ; then
     ls -1 ~/.ctafconf/etc | grep ".grk$" | while read line; do
         name=`echo $line | sed -e s/.grk//`
         grk_ask_install $name
@@ -168,7 +173,7 @@ if [ x$insmethod = xask ]; then
 fi
 
 ###ALL
-if [ x$insmethod = xall ]; then
+if [ x$insmethod = xall ] ; then
     ls -1 ~/.ctafconf/etc | grep ".grk$" | while read line; do
         name=`echo $line | sed -e s/.grk//`
         grk_install $name
@@ -176,7 +181,7 @@ if [ x$insmethod = xall ]; then
 fi
 
 ###CHOICE
-if [ x$insmethod = xchoice ]; then
+if [ x$insmethod = xchoice ] ; then
     SSFT_DEFAULT=`grk_installed_list`
     ssft_select_multiple "Install" "Select packages you want to install" `ls -1 ~/.ctafconf/etc | grep ".grk$" | sed -e s/.grk//`
     grk_install_list $SSFT_RESULT
