@@ -23,6 +23,7 @@
 
 grk_backup=~/.ctafconf/perso/previous
 grk_etc=~/.ctafconf
+grk_minedir=~/.ctafconf/perso
 grk_debug=no
 
 #0 good
@@ -34,7 +35,7 @@ grk_testlink ()
 
   [ x$grk_debug = xyes ] && echo "Testing link: $grk_etc/$src $dst"
   if ! which file >/dev/null 2>/dev/null || ! [ "x`file -b $dst`" = "xsymbolic link to \`$grk_etc/$src'" ] ; then
-      return 1
+    return 1
   fi
   return 0
 }
@@ -51,7 +52,10 @@ grk_testfile()
   if ! [ -f $dst ] || [ -h $dst ] ; then
       return 1
   fi
-  return 0
+  if diff $grk_etc/$src $dst >/dev/null; then
+    return 0
+  fi
+  return 1
 }
 
 #0 good
@@ -168,4 +172,59 @@ grk_mine ()
   name=$2
 
   echo "mine: $src -- $name"
+  if ! [ -f ~/.ctafconf/perso/"$src".mine ]; then
+    cp ~/.ctafconf/etc/mine/$src.mine ~/.ctafconf/perso
+    cp ~/.ctafconf/etc/mine/$src.mine ~/.ctafconf/perso/previous
+    return
+  fi
+
+  #same file
+  if diff -u ~/.ctafconf/etc/mine/"$src".mine ~/.ctafconf/perso/"$src".mine >/dev/null ; then
+    return
+  fi
+
+  #user have not modified the file
+  if diff -u ~/.ctafconf/perso/previous/"$src".mine ~/.ctafconf/perso/"$src".mine >/dev/null; then
+    cp ~/.ctafconf/etc/mine/"$src".mine ~/.ctafconf/perso/"$src".mine
+    return
+  fi
+
+  tmp_patch=~/.ctafconf/perso/.tmp1
+  tmp_f1=~/.ctafconf/perso/.tmp2
+  tmp_f2=~/.ctafconf/perso/.tmp3
+  tmp_diff=~/.ctafconf/perso/.tmp4
+
+  #dest file
+  if [ -f ~/.ctafconf/perso/previous/"$src".mine ]; then
+
+    #diff between 2 upstream version, then patch
+    cp ~/.ctafconf/perso/previous/"$src".mine $tmp_f1
+    cp ~/.ctafconf/etc/mine/"$src".mine $tmp_f2
+
+    cp ~/.ctafconf/perso/$src.mine $tmp_patch 2>/dev/null
+    diff -c $tmp_f1 $tmp_f2 >$tmp_diff
+
+    if ! cat $tmp_diff | patch -c -f $tmp_patch 2>/dev/null; then
+      echo "patch dont suceeded"
+      #diff between previous and user version, then patch new upstream
+      cp ~/.ctafconf/perso/previous/"$src".mine $tmp_f1
+      cp ~/.ctafconf/perso/"$src".mine $tmp_f2
+
+      cp ~/.ctafconf/etc/mine/$src.mine $tmp_patch 2>/dev/null
+      diff -c $tmp_f1 $tmp_f2 >$tmp_diff
+      if ! cat $tmp_diff | patch -c -f $tmp_patch 2>/dev/null; then
+        echo "patch dont suceeded"
+      fi
+    fi
+    patchfile="`echo 'You have modified '$src'.mine, do you want to apply the current diff to '$src'.mine (I think yes)?;'`"
+    patchfile=$patchfile`diff -c ~/.ctafconf/perso/$src.mine $tmp_patch`
+
+    if ssft_yesno "Change in user file detected" "$patchfile"; then
+      echo "patchinggg"
+      #cat $tmp_diff | patch -b -u ~/.ctafconf/perso/"$src".mine
+    fi
+
+  else
+    ssft_display_message "Change in user-specific file" "The file $src.mine have been updated upstream. You should compare ~/.ctafconf/etc/mine/$src.mine and your's ~/.ctafconf/perso/$src.mine"
+  fi
 }
